# MonoDelay-Nilran

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: CustomLookAndFeel.cpp  DelayEngine.cpp  DelayEngine.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
